# dz-contributor

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.github/workflows/: shapley-rs.yml  web.yml
app/: error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/changelog/: page.tsx
app/contributors/: page.tsx
app/economics/: page.tsx
app/link-value/: page.tsx
app/links/: page.tsx
app/methodology/: page.tsx
app/network/: page.tsx
app/rewards/: page.tsx
app/simulate/: page.tsx
app/status/: page.tsx
app/validators/: page.tsx
components/: header.tsx  section-heading.tsx
components/contributors/: contributor-changelog.tsx  contributor-detail.tsx  onchain-reward-history.tsx  reward-reconciliation.tsx
components/economics/: economics-page-client.tsx  epoch-reward-history.tsx  live-baseline-shapley.tsx  network-economics.tsx  pool-projection.tsx  shapley-tracking.tsx  share-vs-footprint.tsx  weekly-digest.tsx
components/links/: links-table-content.tsx  links-table.tsx
components/network/: live-map.tsx  metro-demand.tsx  network-page-client.tsx
components/simulator/: shapley-job-modal.tsx  simulate-tab.tsx  simulator-map.tsx
components/ui/: badge.tsx  button.tsx  dense-table.tsx  dialog.tsx  inline-filter.tsx  keyboard-shortcuts.tsx  network-pulse.tsx  page-header.tsx  select.tsx  (+8 more)
docs/: README.md  architecture.md  data-sources.md  development.md  operations.md  shapley-pipeline.md  shapley-service.md
lib/: observability.ts
scripts/: decode-live-rewards.ts  gen-epoch149-parity-fixture.ts  parity-build-input.ts  queue-clear.sh  test-baseline-route.ts  test-borsh-registry.ts  test-canonical-parity.ts  test-coverage-gaps.ts  test-demand-overrides.ts  test-link-edits.ts  test-scenario-url.ts  validate-shapley.ts  verify-contributor-directory.ts  verify-derive-and-decode.ts
services/shapley-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  rust-toolchain.toml
services/shapley-rs/docs/: DZ_PARITY.md
services/shapley-rs/src/: cache.rs  jobs.rs  lib.rs  main.rs  model.rs  queue.rs  routes.rs  worker.rs
services/shapley-rs/tests/: dedup_devices.rs  link_estimate_http.rs  linkest_timing.rs  parity_epoch149.rs  smoke.sh  three_operator.rs  upstream_simple.rs
services/shapley-rs/tests/fixtures/: simple.json  three-operator.json
services/shapley-rs/tests/fixtures/epoch149/: expected_leaves.json  input.json  our_proportions.json  per_city_values.json
types/: react-simple-maps.d.ts
(+97 files in other folders)
